--- a/main.html
+++ b/main.html
@@ -4,45 +4,38 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Mytra Size Chart - Problem Statement</title>
 	<style>
-		        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+		
         table {
             width: 100%;
             border-collapse: collapse;
-            margin: 20px 0;
-            font-size: 16px;
         }
-        thead {
-            background-color: #f4f4f4;
-        }
+		
         th, td {
             border: 1px solid #ddd;
-            padding: 12px;
-            text-align: center;
+            padding: 10px;
+            text-align: left;
         }
         th {
-            background-color: #f8f8f8;
-            font-weight: bold;
+            background-color: #f2f2f2;
         }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
+       
     </style>
-	</style>
 </head>
 
 <body>
+	<h1>Myntra Size Chart</h1>
 	<table>
 		<thead>
+			<tr>
 			<th>Part</th>
 			<th>XS</th>
 			<th>S</th>
 			<th>M</th>
 			<th>L</th>
 			<th>XL</th>
+		</tr>
 		</thead>
 		<tbody>
 			<tr>
